tests/golden/errors/partial_chain.kso
main =
  print "steeping" >> print "pouring"
  >> print "serving"
